syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "via.sdj3.protobuf.cart";
option java_outer_classname = "ShoppingCartProto";


service ShoppingCartService {
  rpc AddToShoppingCart (AddToShoppingCartRequest) returns (AddToShoppingCartResponse);
  rpc GetAllCartItems (GetAllCartItemsRequest) returns (GetAllCartItemsResponse);
  rpc ClearCart (ClearCartRequest) returns (ClearCartResponse);
}

message GrpcCartItem {
  int32 id = 1;
  int32 customer_id = 2;
  int32 item_id = 3;
  int32 quantity = 4;
}

message AddToShoppingCartRequest {
  int32 customer_id = 1;
  int32 item_id = 2;
  int32 quantity = 3;
}

message AddToShoppingCartResponse {
  GrpcCartItem cartItem = 1;
}

message GetAllCartItemsRequest {

}

message GetAllCartItemsResponse {
  repeated GrpcCartItem items = 1;
}

message ClearCartRequest {
  int32 customer_id = 1;
}

message ClearCartResponse {
  string result = 1;
}






